--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN" class="main-html">
+<html lang="zh-CN" class="main-html" debug=true>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!-- HTTP 1.1 -->
@@ -11,6 +11,15 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!--ios web app-->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!--chrome web app-->
+    <meta name="mobile-web-app-capable" content="yes">
+    <!--QQ web app-->
+    <!--<meta name="x5-orientation" content="portrait">-->
+    <!--<meta name="x5-fullscreen" content="true">-->
+    <!--<meta name="x5-page-mode" content="app">-->
+
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="拼接控制 splice">
@@ -18,9 +27,11 @@
     <link rel="icon" href="favicon.ico">
     <title data-localize="index.title"></title>
 
+    <link href="lib/normalize.min.css" rel="stylesheet">
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="lib/bootstrap-select/css/bootstrap-select.min.css" rel="stylesheet">
     <link href="lib/bootstrap-validator/css/bootstrapValidator.min.css" rel="stylesheet">
+    <link href="lib/jquery-range/jquery.range.css" rel="stylesheet">
     <link href="lib/messenger/css/messenger.css" rel="stylesheet">
     <link href="lib/messenger/css/messenger-theme-flat.css" rel="stylesheet">
     <link href="lib/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
@@ -37,7 +48,7 @@
 </head>
 <body class="main-body">
 <!--加载动画-->
-<div class="loader">
+<div id="loader">
     <div class="frosted-glass"></div>
     <i class="fa fa-spinner fa-pulse"></i>
 </div>
@@ -74,16 +85,20 @@
                 <div id="navbar" class="navbar-collapse collapse">
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#" id="synchronize" data-localize="index.btn.syn" data-replace="right"><i class="fa fa-refresh" aria-hidden="true"></i> </a></li>
+                        <li>
+                            <a href="#" id="fullScr"><i class="fa fa-arrows-alt"></i><span data-localize="index.btn.fullscr"></span></a>
+                            <a href="#" id="compressScr" class="hide"><i class="fa fa-compress"></i><span data-localize="index.btn.compress"></span></a>
+                        </li>
+                        <li><a href="#" id="synchronize"><i class="fa fa-refresh"></i><span data-localize="index.btn.syn"></span> </a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars" aria-hidden="true"></i></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cogs" aria-hidden="true"></i></a>
                             <ul id="gbl-setting" class="dropdown-menu">
                                 <li><a href="" data-localize="index.setting.comm" data-replace="right" data-toggle="modal" data-target="#comm_setting"><i class="fa fa-link fa-lg"></i> </a></li>
                                 <li><a href="" data-localize="index.setting.splice" data-replace="right" data-toggle="modal" data-target="#splice_setting"><i class="fa fa-th fa-lg"></i> </a></li>
                                 <li><a href="" data-localize="index.setting.software" data-replace="right" data-toggle="modal" data-target="#software_setting"><i class="fa fa-cube fa-lg"></i> </a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header" data-localize="index.setting.help" data-replace="right"><i class="fa fa-language text-danger"></i></li>
-                                <li><a href="" data-localize="index.setting.user_manual" data-replace="right"><i class="fa fa-book fa-lg"></i> </a></li>
+                                <!--<li class="dropdown-header" data-localize="index.setting.help" data-replace="right"><i class="fa fa-language text-danger"></i></li>-->
+                                <li><a href="#" data-localize="index.setting.user_manual" data-replace="right"><i class="fa fa-book fa-lg"></i> </a></li>
                                 <li><a href="" data-localize="index.setting.version_info" data-replace="right" data-toggle="modal" data-target="#version_info"><i class="fa fa-info-circle fa-lg"></i> </a></li>
                             </ul>
                         </li>
@@ -196,6 +211,7 @@
                                         <li><a href="#">175%</a></li>
                                         <li><a href="#">200%</a></li>
                                     </ul>
+                                    <!--<input type="hidden" class="slider-input" value="0.0">-->
                                 </li>
                             </ul>
 
@@ -208,7 +224,6 @@
                         </div>
                         <div class="panel-footer">
                             <div class="mouse-pos">x:0,y:0</div>
-
                             <ul class="ellipsis-btn">
                                 <li class="sky-btn item"><a>01</a></li>
                                 <li class="sky-btn item"><a>02</a></li>
@@ -458,6 +473,25 @@
     </div>
 </div>
 
+<!--预设模式预览-->
+<div id="modal-scene-preview" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" data-localize="index.modal.title.preview"></h4>
+            </div>
+            <div class="modal-body">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default no" data-dismiss="modal" data-localize="index.btn.cancel"></button>
+                <button type="button" class="btn btn-primary ok" data-dismiss="modal" data-localize="index.btn.ok"></button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!--修改密码-->
 <div id="modal-ud-psw" class="modal fade" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-sm">
@@ -497,7 +531,7 @@
     </div>
 </div>
 
-<!--/////////////////////////设置dialog////////////////////////-->
+<!--/////////////////////////设置modal////////////////////////-->
 <!--通信设置-->
 <div id="comm_setting" class="modal fade communication" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-sm">
@@ -707,24 +741,24 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="sky-tag">
-                            <span class="word" data-localize="index.setting.splice.currection_pix"></span>
+                        <!--<div class="sky-tag">-->
+                            <!--<span class="word" data-localize="index.setting.splice.currection_pix"></span>-->
 
-                            <form class="form-horizontal">
-                                <div class="form-group">
-                                    <div class="col-sm-12 input-group">
-                                        <span class="input-group-addon" data-localize="index.setting.splice.border_top"></span>
-                                        <input type="number" name="cpTop" class="form-control" min="-200" max="200">
-                                        <span class="input-group-addon" data-localize="index.setting.splice.border_bottom"></span>
-                                        <input type="number" name="cpBottom" class="form-control" min="-200" max="200">
-                                        <span class="input-group-addon" data-localize="index.setting.splice.border_left"></span>
-                                        <input type="number" name="cpLeft" class="form-control" min="-200" max="200">
-                                        <span class="input-group-addon" data-localize="index.setting.splice.border_right"></span>
-                                        <input type="number" name="cpRight" class="form-control" min="-200" max="200">
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
+                            <!--<form class="form-horizontal">-->
+                                <!--<div class="form-group">-->
+                                    <!--<div class="col-sm-12 input-group">-->
+                                        <!--<span class="input-group-addon" data-localize="index.setting.splice.border_top"></span>-->
+                                        <!--<input type="number" name="cpTop" class="form-control" min="-200" max="200">-->
+                                        <!--<span class="input-group-addon" data-localize="index.setting.splice.border_bottom"></span>-->
+                                        <!--<input type="number" name="cpBottom" class="form-control" min="-200" max="200">-->
+                                        <!--<span class="input-group-addon" data-localize="index.setting.splice.border_left"></span>-->
+                                        <!--<input type="number" name="cpLeft" class="form-control" min="-200" max="200">-->
+                                        <!--<span class="input-group-addon" data-localize="index.setting.splice.border_right"></span>-->
+                                        <!--<input type="number" name="cpRight" class="form-control" min="-200" max="200">-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</form>-->
+                        <!--</div>-->
                     </div>
                     <div role="tabpanel" class="tab-pane fade" id="screen_2"></div>
                     <div role="tabpanel" class="tab-pane fade" id="screen_3"></div>
@@ -1002,6 +1036,9 @@
 </div>
 
 <!--js包-->
+
+<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>
+
 <script src="lib/modernizr.min.js" type="text/javascript"></script>
 <script src="lib/jquery-2.1.4.min.js"></script>
 
@@ -1014,7 +1051,9 @@
 <script src="lib/jquery-mousewheel/jquery.mousewheel.js" type="text/javascript"></script>
 <script src="lib/jquery-pep-js/jquery.pep.js" type="text/javascript"></script>
 <script src="lib/jquery-cookie/jquery.cookie.js" type="text/javascript"></script>
+<script src="lib/jquery-range/jquery.range-min.js"></script>
 <script src="lib/hammer-js/hammer.min.js" type="text/javascript"></script>
+<script src="lib/hammer-js/propagating.js" type="text/javascript"></script>
 <script src="lib/hammer-js/jquery.hammer.js" type="text/javascript"></script>
 <!--<script src="lib/fullscreen.js" type="text/javascript"></script>-->
 <!--<script src="lib/jquery-indexeddb/jquery.indexeddb.min.js" type="text/javascript"></script>-->
