--- a/web/scale.html
+++ b/web/scale.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Title</title>
 
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
     <style>
         body, html{
@@ -68,6 +69,7 @@
 <script src="lib/jquery-2.1.4.min.js"></script>
 
 <script src="lib/hammer-js/hammer.min.js" type="text/javascript"></script>
+<script src="lib/hammer-js/propagating.js" type="text/javascript"></script>
 <script src="lib/hammer-js/jquery.hammer.js" type="text/javascript"></script>
 <script src="lib/jquery-mousewheel/jquery.mousewheel.js" type="text/javascript"></script>
 
