--- a/web/login.html
+++ b/web/login.html
@@ -17,7 +17,7 @@
     <link href="lib/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="lib/titatoggle/titatoggle-dist.css" rel="stylesheet">
 
-    <link href="css/app.css" rel="stylesheet">
+    <link href="css/app-pep.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -25,7 +25,7 @@
     <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body class="main-body display-table">
+<body class="main-body body display-table">
 <div class="display-table-cell">
     <div class="login-form">
         <div class="login-header">
