--- a/web/index.html
+++ b/web/index.html
@@ -110,7 +110,9 @@
                         </li>
                         <li><a href="#" id="synchronize"><i class="fa fa-refresh"></i><span data-localize="index.btn.syn"></span> </a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cogs" aria-hidden="true"></i></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                <i class="fa fa-cog" aria-hidden="true"></i><span data-localize="index.btn.setting"></span>
+                            </a>
                             <ul id="gbl-setting" class="dropdown-menu animated fadeInDown">
                                 <li><a href="" data-localize="index.setting.comm" data-replace="right" data-toggle="modal" data-target="#comm_setting"><i class="fa fa-link fa-lg"></i> </a></li>
                                 <li><a href="" data-localize="index.setting.splice" data-replace="right" data-toggle="modal" data-target="#splice_setting"><i class="fa fa-th fa-lg"></i> </a></li>
@@ -983,18 +985,20 @@
 <script src="lib/html2canvas/html2canvas.min.js" type="text/javascript"></script>
 <!--<script src="lib/jquery.mCustomScrollbar/js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>-->
 <script src="lib/slimscroll/jquery.slimscroll.js" type="text/javascript"></script>
+<script src="lib/jquery.inputmask/inputmask.js" type="text/javascript"></script>
+<script src="lib/jquery.inputmask/inputmask.extensions.js" type="text/javascript"></script>
 
 <!--<script src="lib/jquery-dragmove/jQuery.dragmove.js" type="text/javascript"></script>-->
 <script src="js/tool.js" type="text/javascript"></script>
-<script src="js/main-use-pep.js" type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
 <!--<script src="js/main.min.js" type="text/javascript"></script>-->
 
 <script>
 $(function() {
 
-    var app = new SkyApp();
-
-
+    setTimeout(function(){
+        var app = new SkyApp();
+    },400)
 });
 </script>
 </body>
