--- a/web/login.html
+++ b/web/login.html
@@ -32,18 +32,18 @@
             <span>显示管理平台</span>
         </div>
         <div class="login-body">
-            <ul id="authority_tabs" class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active">
-                    <a href="#login_tab" role="tab" data-toggle="tab">
-                        登录
-                    </a>
-                </li>
-                <li role="presentation">
-                    <a href="#reg_tab" role="tab" data-toggle="tab">
-                        注册
-                    </a>
-                </li>
-            </ul>
+            <!--<ul id="authority_tabs" class="nav nav-tabs" role="tablist">-->
+                <!--<li role="presentation" class="active">-->
+                    <!--<a href="#login_tab" role="tab" data-toggle="tab">-->
+                        <!--登录-->
+                    <!--</a>-->
+                <!--</li>-->
+                <!--<li role="presentation">-->
+                    <!--<a href="#reg_tab" role="tab" data-toggle="tab">-->
+                        <!--注册-->
+                    <!--</a>-->
+                <!--</li>-->
+            <!--</ul>-->
             <div class="tab-content">
                 <div role="tabpanel" class="tab-pane fade in active" id="login_tab">
                     <br>
@@ -79,36 +79,36 @@
                         </div>
                     </form>
                 </div>
-                <div role="tabpanel" class="tab-pane fade" id="reg_tab">
-                    <br>
-                    <form id="reg_form">
-                        <div class="form-group">
-                            <label for="reg_name">用户名：</label>
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                                <input type="text" class="form-control" id="reg_name" name="name" placeholder="用户名">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="reg_password">密码：</label>
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-key"></i></span>
-                                <input type="password" class="form-control" id="reg_password" name="password" placeholder="密码">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="reg_confirm_password">确认密码：</label>
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-key"></i></span>
-                                <input type="password" class="form-control" id="reg_confirm_password" name="confirm_password" placeholder="确认密码">
-                            </div>
-                        </div>
-                        <div class="form-group btn-float-r">
-                            <input type="reset" class="btn login-btn" id="reset" value="重置">
-                            <input type="submit" class="btn login-btn" id="reg" value="注册">
-                        </div>
-                    </form>
-                </div>
+                <!--<div role="tabpanel" class="tab-pane fade" id="reg_tab">-->
+                    <!--<br>-->
+                    <!--<form id="reg_form">-->
+                        <!--<div class="form-group">-->
+                            <!--<label for="reg_name">用户名：</label>-->
+                            <!--<div class="input-group">-->
+                                <!--<span class="input-group-addon"><i class="fa fa-user"></i></span>-->
+                                <!--<input type="text" class="form-control" id="reg_name" name="name" placeholder="用户名">-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="form-group">-->
+                            <!--<label for="reg_password">密码：</label>-->
+                            <!--<div class="input-group">-->
+                                <!--<span class="input-group-addon"><i class="fa fa-key"></i></span>-->
+                                <!--<input type="password" class="form-control" id="reg_password" name="password" placeholder="密码">-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="form-group">-->
+                            <!--<label for="reg_confirm_password">确认密码：</label>-->
+                            <!--<div class="input-group">-->
+                                <!--<span class="input-group-addon"><i class="fa fa-key"></i></span>-->
+                                <!--<input type="password" class="form-control" id="reg_confirm_password" name="confirm_password" placeholder="确认密码">-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="form-group btn-float-r">-->
+                            <!--<input type="reset" class="btn login-btn" id="reset" value="重置">-->
+                            <!--<input type="submit" class="btn login-btn" id="reg" value="注册">-->
+                        <!--</div>-->
+                    <!--</form>-->
+                <!--</div>-->
             </div>
 
         </div>
