--- a/web/login.html
+++ b/web/login.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="拼接控制 splice">
+    <meta name="author" content="skyworth 创维群欣">
+    <!--ios web app-->
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon-precomposed" href="logo.png" />
+    <!--chrome web app-->
+    <meta name="mobile-web-app-capable" content="yes">
+    <!--QQ web app-->
+    <!--<meta name="x5-orientation" content="portrait">-->
+    <!--<meta name="x5-fullscreen" content="true">-->
+    <!--<meta name="x5-page-mode" content="app">-->
+
     <link rel="icon" href="favicon.ico">
     <title data-localize="login.title">登录</title>
 
-    <!-- Bootstrap本地服务器css文件 -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="lib/bootstrap-validator/css/bootstrapValidator.min.css" rel="stylesheet">
     <link href="lib/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/titatoggle/titatoggle-dist.css" rel="stylesheet">
 
     <link href="css/app-pep.css" rel="stylesheet">
@@ -26,7 +35,7 @@
     <![endif]-->
 </head>
 <body class="main-body body display-table">
-<div class="display-table-cell">
+<div class="display-table-cell animated fadeInUp">
     <div class="login-form">
         <div class="login-header">
             <span>显示管理平台</span>
@@ -64,7 +73,7 @@
                         </div>
                         <div class="sky-checkbox checkbox checkbox-slider--c">
                             <label>
-                                <input name="rec_psw" type="checkbox" class="form-control"><span>记住密码</span>
+                                <input name="rec_psw" type="checkbox" class="form-control"><span>一周免登录</span>
                             </label>
                         </div>
                         <div id="login_result" class="alert alert-warning alert-dismissible fade in" role="alert">
@@ -74,8 +83,8 @@
                             <span>账号密码错误</span>
                         </div>
 
-                        <div class="form-group btn-float-r">
-                            <input type="submit" class="btn login-btn" id="login" value="登录">
+                        <div class="form-group btn-float-c">
+                            <input type="submit" class="btn login-btn" id="login" value="登&nbsp;录">
                         </div>
                     </form>
                 </div>
